--- a/app/views/apps/new.html.erb
+++ b/app/views/apps/new.html.erb
@@ -1,3 +1,9 @@
+<style type="text/css">
+  input.text { border: 1px solid lightblue; border-radius: 7px; outline-style:none; padding: 3px; }
+</style>
+
 <form action="/apps" method="POST">
-  <%= text_field_tag 'username'%>
+  <label for="username">Username:</label>
+  <%= text_field_tag 'username', nil, :class => 'text' %>
+  <input type="submit" value="Download" />
 </form>
