сделал заглавную страницу

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,3 +1,27 @@
-<div style="font-size: 72px; font-color: #313131;">
-  <a href="/apps/new"><span>Get my very own mac app!</span></a>
+<style type="text/css" media="screen">
+  body { font: 18px Arial,Helvetica,"Nimbus Sans L",sans-serif; }
+  .big_link { font-size: 72px; }
+  .big_link a { color: #3875D7; text-decoration: none; }
+  .big_link a:hover { color: #F27478; }
+  .big_link a:hover span { text-decoration: underline; }
+  .grey { color: #909090; }
+  .black { color: #000; }
+</style>
+
+<span class='grey'>This is a screen capture uploader application for mac.</span>
+
+<span class='grey'>The usage is very simple:</span>
+<ol class='grey'>
+  <li><span class='black'>download</span> your personalized app, unpack it and drop to the <span class='black'>Apps folder</span></li>
+  <li><span class='black'>launch</span> it and <span class='black'>capture</span> a part of a display with a cursor</li>
+  <li>get on any text field and <span class='black'>press ⌘+V</span>. Here should be a new uploaded screen capture link.</li>
+  <li>you can <span class='black'>share this link</span> with your friends and colleagues (this link is <span class='black'>persistent</span> so you can share it in your docs)</li>
+  <li>place app icon to the doc: it'll became your most used app soon</li>
+</ol>
+
+<div class='big_link'>
+  <a href="/apps/new">
+    <img src='/images/upload.png' style='margin-bottom: -30px;'/>
+    <span>Get my very own mac app!</span>
+  </a>
 </div>
