поправил фразу насчет персонального приложения

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -11,7 +11,7 @@
 <span class='grey'>This is a screen capture uploader application for mac.</span>
 
 <ol class='grey'>
-  <li><span class='black'>download</span> your personalized app, unpack it and drop to the <span class='black'>Apps folder</span></li>
+  <li><span class='black'>download</span> your personal app, unpack it and drop to the <span class='black'>Apps folder</span></li>
   <li><span class='black'>launch</span> it and <span class='black'>capture</span> a part of a display with a cursor</li>
   <li>get on any text field and <span class='black'>press ⌘+V</span>. Here should be a new uploaded screen capture link.</li>
   <li>you can <span class='black'>share this link</span> with your friends and colleagues (this link is <span class='black'>persistent</span> so you can share it in your docs)</li>
