добавил комменты и лайк-блок

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -6,7 +6,10 @@
   .big_link a:hover span { text-decoration: underline; }
   .grey { color: #909090; }
   .black { color: #000; }
+  #fb { position: absolute; right: 100px; bottom: 50px; }
 </style>
+
+<script src="http://connect.facebook.net/en_US/all.js#appId=218626764820932&amp;xfbml=1"></script>
 
 <span class='grey'>This is a screen capture uploader application for mac.</span>
 
@@ -23,4 +26,13 @@
     <img src='/images/upload.png' style='margin-bottom: -30px;'/>
     <span>Get my very own mac app!</span>
   </a>
+</div>
+<div id="fb">
+  <div id='fb-root'></div>
+  <fb:like href="http://i.4pcbr.com" layout="box_count" show_faces="true" width="65" height='65' font="tahoma"></fb:like>
+  <iframe src='http://dislike.4pcbr.com/plugins/dislike.php?href=http%3A%2F%2Fi.4pcbr.com' border='0' width='65' height='65' frameborder='0' scrolling='no'></iframe>
+</div>
+<br/><br/>
+<div>
+  <fb:comments href="i.4pcbr.com" num_posts="30" width="800"></fb:comments>
 </div>
