--- a/views/index.erb
+++ b/views/index.erb
@@ -22,7 +22,7 @@
 </ol>
 
 <div class='big_link'>
-  <a href="/apps/new">
+  <a href="/new">
     <img src='/images/upload.png' style='margin-bottom: -30px;'/>
     <span>Get my very own mac app!</span>
   </a>
