--- a/views/form.erb
+++ b/views/form.erb
@@ -2,7 +2,7 @@
   input.text { border: 1px solid lightblue; border-radius: 7px; outline-style:none; padding: 3px; }
 </style>
 
-<form action="/new" method="POST">
+<form action="/new" method="POST" enctype="multipart/form-data">
   <label for="username">Username:</label>
   <input type="text" name="username" value="" id="username" class="text">
   <input type="submit" value="Download" />
